--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
-    <script src="Js_Day2.js"></script>
+   <!-- <script src="Js_Day2.js"></script>-->
+    <script src="Js_Day3Game.js"></script>
 </body>
 </html>
